# LRC

./: .gitignore  CLAUDE.md  README.md  environment.yml  pyproject.toml
claude_instructions/: code-workflow.md
docs/: lrc-original-readme.md
docs/superpowers/plans/: 2026-03-10-model-factory.md  2026-03-10-neural-ode-tasks.md  2026-03-10-tf-upgrade-uv-setup.md  2026-03-10-verify-lrc-results.md  2026-03-12-ncp-wiring.md  2026-03-12-new-cells.md  2026-03-12-smoke-test-combinations.md  2026-03-13-neural-ode-benchmark.md
docs/superpowers/specs/: 2026-03-10-model-factory-design.md  2026-03-10-neural-ode-tasks-design.md  2026-03-10-tf-upgrade-uv-setup-design.md  2026-03-10-verify-lrc-results-design.md  2026-03-12-ncp-wiring-design.md  2026-03-12-new-cells-design.md  2026-03-12-smoke-test-design.md  2026-03-13-neural-ode-benchmark-design.md
experiments/: benchmark_neural_ode.py  run_neural_ode.py  smoke_test_combinations.py  verify_neural_ode.py
experiments/configs/: neural_ode_lrc_spiral.yaml
src/models/: __init__.py  rnn_model.py
src/neurons/: __init__.py  base_cell.py  ctrnn_cell.py  lrc_ar_cell.py  lrc_cell.py  lstm_cell.py
src/tasks/neural_ode/: datasets.py  ode_model.py  solver.py  trainer.py
src/wirings/: __init__.py  base_wiring.py  dense.py  ncp.py
tests/experiments/: test_benchmark_neural_ode.py  test_smoke_combinations.py  test_verify_script.py
tests/models/: test_make_model.py
tests/neurons/: test_cells.py
tests/tasks/neural_ode/: test_datasets.py  test_ode_model.py  test_solver.py  (+1 more)
tests/wirings/: test_dense_wiring.py  test_ncp_wiring.py
